####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = archendale 

EXTRA_DIST = archendale.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO archendale.lsm 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4


