####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = archendale
archendale_SOURCES = 
archendale_LDADD   = 


####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = archendale

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
archendale_LDFLAGS = $(all_libraries) 
                                                                                
